--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/datasource-rest": "^5.0.2",
     "@apollo/server": "^4.5.0",
     "@as-integrations/next": "^1.2.0",
     "@types/react": "18.0.28",
@@ -16,7 +17,6 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
